--- a/src/components/Styles/Video.css
+++ b/src/components/Styles/Video.css
@@ -1,17 +1,20 @@
+
 .thumbnail{
     height: 150px;
     width: 250px;
 }
 .video-container{
     /* margin-right: 30px; */
-    margin-left: 30px;
-    height: 50px;
+    margin-left: 33px;
+    margin-top:25px;
+    height: 315px;
     padding: 2px;
+    border: 1px solid white;
     
 }
 
 .video-title{
-    width: 320px;
+    width: 300px;
     margin-bottom: -13px;
 }
 .views,.upload{
